--- a/style.css
+++ b/style.css
@@ -67,3 +67,26 @@ button:active{
 img:hover{
     opacity: 0.80;
 }
+@media (max-width: 760px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr; 
+        justify-items: center;
+    }
+    body {
+        display: block; 
+        padding: 20px; 
+        height: auto;
+        text-align: center;
+    }
+    .first,.second{
+        padding: 10px;
+        width:250px;
+        margin-bottom: 30px;
+    }
+    img{
+        width:250px;
+    }
+
+}
+
